updated presonal details

--- a/config.toml
+++ b/config.toml
@@ -52,11 +52,11 @@ enableGitInfo = false
 
   # Your details.
   name = "Danyang Dai"
-  role = "Graduated Accounting and Finance Student"
+  role = "Master Student of Applied Econometrics"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Monash University", url = "" } ]
+  organizations = [ { name = "University of Melbourne", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
