--- a/config.toml
+++ b/config.toml
@@ -52,7 +52,7 @@ enableGitInfo = false
 
   # Your details.
   name = "Danyang Dai"
-  role = "Master Student of Applied Econometrics"
+  role = "Masters Student of Applied Econometrics"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
